Contact footer + fix copy tooltip

--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ iframe {
 
 .container-contact100 {
   width: 100%;  
-  min-height: 100vh;
+  min-height: 90%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
