--- a/css/copy.css
+++ b/css/copy.css
@@ -1,13 +1,13 @@
-.tooltip {
-    position: relative;
-    display: inline-block;
-  }
-  
-.tooltip .tooltiptext {
+.ctooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.ctooltip .ctooltiptext {
   visibility: hidden;
   width: 140px;
-  background-color: rgb(17, 32, 238);
-  color: rgb(94, 10, 10);
+  background-color: #555;
+  color: #fff;
   text-align: center;
   border-radius: 6px;
   padding: 5px;
@@ -20,7 +20,7 @@
   transition: opacity 0.3s;
 }
 
-.tooltip .tooltiptext::after {
+.ctooltip .ctooltiptext::after {
   content: "";
   position: absolute;
   top: 100%;
@@ -31,7 +31,7 @@
   border-color: #555 transparent transparent transparent;
 }
 
-.tooltip:hover .tooltiptext {
+.ctooltip:hover .ctooltiptext {
   visibility: visible;
   opacity: 1;
 }
@@ -55,7 +55,8 @@
 
 .footer {
   text-align: center;
-  padding-bottom: 1px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
   font-family: Poppins-Regular;
   font-size: 14px;
 }
