--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,16 @@ iframe {
   padding-bottom: 20px;
 }
 
+.contact100-form-subtitle {
+  display: block;
+  font-family: Poppins-Bold;
+  font-size: 22px;
+  color: #a00;
+  line-height: 1;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
 
 
 /*------------------------------------------------------------------
